--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
                <h3>Chart Application</h3>
           </div>
 
-          <div class="card offset--md-3 col-md-6 col-12">
+          <div class="card offset-md-3 col-md-6 col-12">
                <div class="card-header">
                     Create User
                </div>
